# MLOPS-App

./: README.md  app.py  data.dvc  pyproject.toml  render.yaml  requirements.txt
config/: config.yaml
data/processed/: 02_Used_Car_Prices.xlsx
models/: best_housing_model.pkl
notebooks/: damian_used_cars.ipynb  jade_housing_prices.ipynb  natelie_wheat_type.ipynb
outputs/2025-02-27/19-23-07/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-27/19-24-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-27/19-25-00/.hydra/: hydra.yaml
outputs/2025-02-27/19-25-51/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-27/19-26-39/.hydra/: hydra.yaml
outputs/2025-02-27/19-28-11/.hydra/: hydra.yaml
outputs/2025-02-27/19-29-00/.hydra/: hydra.yaml
outputs/2025-02-27/19-31-54/.hydra/: hydra.yaml
outputs/2025-02-27/20-07-04/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-27/20-08-32/.hydra/: hydra.yaml
outputs/2025-02-27/20-10-41/.hydra/: config.yaml  hydra.yaml
outputs/2025-02-27/20-13-16/.hydra/: hydra.yaml
outputs/2025-02-27/20-14-24/.hydra/: hydra.yaml
outputs/2025-02-27/20-14-37/.hydra/: hydra.yaml
outputs/2025-02-27/20-27-05/.hydra/: hydra.yaml
outputs/2025-02-27/20-27-57/.hydra/: hydra.yaml
outputs/2025-02-27/20-29-11/.hydra/: hydra.yaml
outputs/2025-02-27/20-30-38/.hydra/: hydra.yaml
src/: app.py  functions.py  preprocess.py
static/scripts/: car.js  functions.js  home.js  house.js  wheat.js
static/styles/: car.css  home.css  main.css
templates/: carprices.html  home.html  houseprices.html  wheatprices.html
(+140 files in other folders)
