[tool.poetry]
name = "MLOPS-App"
version = "0.1.0"
description = ""
authors = ["Damian <damianlau96@gmail.com>", "Natelie <placeholder@gmail.com>", "Jade <placeholder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
pandas = "2.1.4"
flask = "3.0.3" 
hydra-core = "^1.3.2"
dvc = "^3.53.2"
kaleido = "0.2.1"
pycaret = "3.3.2"
catboost = "^1.2.5"
openpyxl = "^3.1.5"
mlflow = "^2.20.3"
seaborn = "^0.13.2"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
